@@ -4,10 +4,9 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.storage.UserStorage;
+import ru.yandex.practicum.filmorate.exception.ResourceNotFoundException;
 
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 public class UserService {
@@ -19,8 +18,10 @@ public class UserService {
     }
 
     public User addFriend(Long userId, Long friendId) {
-        User user = userStorage.getUserById(userId).orElseThrow(() -> new RuntimeException("User not found"));
-        User friend = userStorage.getUserById(friendId).orElseThrow(() -> new RuntimeException("Friend not found"));
+        User user = userStorage.getUserById(userId)
+                .orElseThrow(() -> new ResourceNotFoundException("Пользователь с id " + userId + " не найден"));
+        User friend = userStorage.getUserById(friendId)
+                .orElseThrow(() -> new ResourceNotFoundException("Друг с id " + friendId + " не найден"));
 
         user.getFriends().add(friendId);
         friend.getFriends().add(userId);
@@ -32,8 +33,10 @@ public class UserService {
     }
 
     public User removeFriend(Long userId, Long friendId) {
-        User user = userStorage.getUserById(userId).orElseThrow(() -> new RuntimeException("User not found"));
-        User friend = userStorage.getUserById(friendId).orElseThrow(() -> new RuntimeException("Friend not found"));
+        User user = userStorage.getUserById(userId)
+                .orElseThrow(() -> new ResourceNotFoundException("Пользователь с id " + userId + " не найден"));
+        User friend = userStorage.getUserById(friendId)
+                .orElseThrow(() -> new ResourceNotFoundException("Друг с id " + friendId + " не найден"));
 
         user.getFriends().remove(friendId);
         friend.getFriends().remove(userId);
@@ -45,15 +48,16 @@ public class UserService {
     }
 
     public List<User> getCommonFriends(Long userId, Long otherId) {
-        User user = userStorage.getUserById(userId).orElseThrow(() -> new RuntimeException("User not found"));
-        User other = userStorage.getUserById(otherId).orElseThrow(() -> new RuntimeException("Other user not found"));
+        User user = userStorage.getUserById(userId)
+                .orElseThrow(() -> new ResourceNotFoundException("Пользователь с id " + userId + " не найден"));
+        User other = userStorage.getUserById(otherId)
+                .orElseThrow(() -> new ResourceNotFoundException("Пользователь с id " + otherId + " не найден"));
 
-        Set<Long> commonFriends = user.getFriends();
-        commonFriends.retainAll(other.getFriends());
-
-        return commonFriends.stream()
-                .map(id -> userStorage.getUserById(id).orElseThrow(() -> new RuntimeException("Friend not found")))
-                .collect(Collectors.toList());
+        user.getFriends().retainAll(other.getFriends());
+        return user.getFriends().stream()
+                .map(id -> userStorage.getUserById(id)
+                        .orElseThrow(() -> new ResourceNotFoundException("Друг с id " + id + " не найден")))
+                .toList();
     }
 }
 
